2004-10-23  Roland McGrath  <roland@frob.com>

	* sysdeps/vax, sysdeps/unix/bsd/vax: Directories and all files removed.
	These are now in the ports repository.

2004-10-23  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_send.c (send_dg): Combine write and read to socket
	into one loop.

2004-10-22  Roland McGrath  <roland@frob.com>

	* Makefile (%.bz2, %.gz): Move these pattern rules ...
	* Makerules: ... to here.

2001-10-31  Alexandre Oliva  <aoliva@redhat.com>

	* elf/elf.h: Add R_MN10300_* relocation numbers.

2004-10-22  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #471] Fix imported from gnulib.
	* time/mktime.c (leapyear, ydms_tm_diff): Year is of type
	long int, not int, to avoid problems when tm_year == INT_MAX
	and tm_mon > 12.
	(__mktime_intenral): Compute year using long int arithmetic,
	not int arithmetic, to avoid problems on hosts where time_t
	and long are 64 bits but int is 32.

	[BZ #468] Import a fix from gnulib.
	* time/mktime.c [! DEBUG]: Do not include <string.h>.
	It's needed only if DEBUG is nonzero.

	[BZ #470] Import fix from gnulib.
	* time/mktime.c [!_LIBC] (__mktime_internal): Define to
	mktime_internal, to avoid clashes with any __mktime_internal
	function defined in the standard library.

	[BZ #469] Imported from gnulib.
	* time/mktime.c (__isleap): Remove; all uses replaced by:
	(leapyear): New function, which avoids overflow by not adding
	1900 to year before testing whether it is a leap year.

	[BZ #472] Imported from gnulib.
	* time/mktime.c (Local Variables): Remove -DHAVE_TIME_R_POSIX;
	no longer used.

2004-10-22  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_send.c: Remove compatibility code which is unused in
	glibc and probably bitrotten.

	* debug/execinfo.h: Remove __THROW from backtrace prototype.

2004-10-22  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/Makefile (CFLAGS-backtrace.c): Add -fexceptions.
	* sysdeps/i386/backtrace.c: Include <bits/libc-lock.h>, <dlfcn.h>,