@@ -1,2 +1,0 @@
-# A Tahoe is mostly just like a Vax.
-vax
