@@ -1,1 +1,0 @@
-unix/bsd/vax
